[build-system]
requires = [
    "setuptools>=61.0",
    "pytest==7.4.4",
    "ipfsApi==0.4.4",
    "ray[default, data]==2.7.1",
    "flask==3.0.0",
    "notebook==7.0.6",
    "boto3"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["cats/"]
include = ["cats"]

[project]
name = "cats"
version = "0.0.0"
authors = [
  { name="Joshua E. Jodesty", email="joshua@block.science"},
]
description = "CATs"
readme = "README.md"
requires-python = ">=3.10.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BlockScience/cats"
Issues = "https://github.com/BlockScience/cats/issues"